[add] builder: move components on mobile [fix] builder: various fixed TODO: publish builder pastes, embed component, flex box component, more options on existing components

--- a/src/classes/pages/assets/style.css
+++ b/src/classes/pages/assets/style.css
@@ -1169,8 +1169,9 @@ br:not(.cm-line br) {
     padding: var(--Padding);
     display: block;
     width: var(--Width);
-    max-width: 100%;
-    min-width: fit-content;
+    max-width: 100vw;
+    min-width: 5rem;
+    overflow: auto;
 }
 
 .builder\:toolbar {
